--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
 								<h3>Gaming</h3>
 								<p>I do game with genre RPG, Action & Strategy.</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/hobby/meme.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<h3>Meme's Enthusiasm</h3>
+								<p>Not sure if fake enthusiams or means it.</p>
+							</article>
 						</div>
 					</section>
 				<!-- three -->
