--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/exp/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Internship at PT.Embitech, 2009</h3>
-								<p>Developed a Desktop Application for employee's attendance using RFId card and VB6.</p>
+								<p>Developed a Desktop Application using Visual Basic 6 for employee's attendance using RFId card.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/exp/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
@@ -53,12 +53,17 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/exp/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>PT Dian Megah Indo Perkasa, Twin Tulipware Indonesia 2017-2019</h3>
-								<p>Worked as Backend Programmer, DBA , and Technical Support.</p>
+								<p>Worked as Backend Programmer using PHP CI, DBA , and Technical Support.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/exp/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>PT Aniqma Kreasi Digital, 2019 - now </h3>
-								<p>Working as Backend Programmer using go and Microservice Architecture.</p>
+								<h3>PT Aniqma Kreasi Digital </h3>
+								<p>Working as Backend Programmer using go and Create Service using gRPC Microservice Architecture.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/exp/05.png" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<h3>PT Qoin Digital Indonesia, 2020 - now </h3>
+								<p>Working as Backend Programmer using go and Create Service Workflow Using Temporal Workflow.</p>
 							</article>
 						</div>
 						
