--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/exp/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>PT Aniqma Kreasi Digital </h3>
+								<h3>PT Aniqma Kreasi Digital, 2019-2020 </h3>
 								<p>Working as Backend Programmer using go and Create Service using gRPC Microservice Architecture.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
