--- a/index.html
+++ b/index.html
@@ -62,8 +62,17 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/exp/05.png" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>PT Qoin Digital Indonesia, 2020 - now </h3>
-								<p>Working as Backend Programmer using go and Create Service Workflow Using Temporal Workflow.</p>
+								<h3>PT Qoin Digital Indonesia, 2020 - 2022 </h3>
+								<p>Working as Backend Programmer using go and Create Service Workflow Using Temporal Workflow, developed SAAS system</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/exp/bri.png" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<h3>PT Bank Rakyat Indonesia (Persero) Tbk, 2022 - 2023 </h3>
+								<p>Develop Loan Applications for commodities of farm in indonesia, 
+									working as BE programmer, 
+									using golang with echo framework, 
+									integrated kafka, rabbitMQ and gRPC 
+									databases using PostgreSQL and Redis</p>
 							</article>
 						</div>
 						
